PRJ_VER=1.2.4
SUMMARY=
REDHAT_BUGZILLA=
[Changes]
- Enhancement:
  + ManageTarget: ADD_CUSTOM_TARGET_COMMAND: NO_FORCE: new option.
- Changed:
  + ManageTranslation: Fix po build
  + ManageRPM: Fix defattr
