@@ -100,20 +100,20 @@ IF(NOT DEFINED _MANAGE_RELEASE_FEDORA_)
 	    ${ARGN}
 	    )
     ENDFUNCTION(RELEASE_FEDORA_FIND_DEPENDENCY var)
+    SET(CMAKE_FEDORA_ADDITIONAL_SCRIPT_PATH ${CMAKE_SOURCE_DIR}/scripts ${CMAKE_SOURCE_DIR}/cmake-fedora/scripts)
 
     RELEASE_FEDORA_FIND_DEPENDENCY(FEDPKG_CMD fedpkg)
     RELEASE_FEDORA_FIND_DEPENDENCY(KOJI_CMD koji)
     RELEASE_FEDORA_FIND_DEPENDENCY(GIT_CMD git)
     RELEASE_FEDORA_FIND_DEPENDENCY(BODHI_CMD bodhi)
-    RELEASE_FEDORA_FIND_DEPENDENCY(KOJI_BUILD_SCRATCH_CMD koji-build-scratch PATH ${CMAKE_SOURCE_DIR}/scripts)
-    RELEASE_FEDORA_FIND_DEPENDENCY(CMAKE_FEDORA_KOJI_CMD cmake-fedora-koji PATH ${CMAKE_SOURCE_DIR}/scripts)
-    RELEASE_FEDORA_FIND_DEPENDENCY(CMAKE_FEDORA_FEDPKG_CMD cmake-fedora-fedpkg PATH ${CMAKE_SOURCE_DIR}/scripts)
+    RELEASE_FEDORA_FIND_DEPENDENCY(KOJI_BUILD_SCRATCH_CMD koji-build-scratch PATH ${CMAKE_FEDORA_ADDITIONAL_SCRIPT_PATH})
+    RELEASE_FEDORA_FIND_DEPENDENCY(CMAKE_FEDORA_KOJI_CMD cmake-fedora-koji PATH ${CMAKE_FEDORA_ADDITIONAL_SCRIPT_PATH})
+    RELEASE_FEDORA_FIND_DEPENDENCY(CMAKE_FEDORA_FEDPKG_CMD cmake-fedora-fedpkg PATH ${CMAKE_FEDORA_ADDITIONAL_SCRIPT_PATH})
 
     ## Set variables
     IF(NOT _manage_release_fedora_dependencies_missing)
 	# Set release tags according to CMAKE_FEDORA_CONF
 	SETTING_FILE_GET_ALL_VARIABLES(${CMAKE_FEDORA_CONF})
-
 
 	SET(BODHI_TEMPLATE_FILE "${CMAKE_FEDORA_TMP_DIR}/bodhi.template"
 	    CACHE FILEPATH "Bodhi template file"
@@ -145,7 +145,7 @@ IF(NOT DEFINED _MANAGE_RELEASE_FEDORA_)
     FUNCTION(RELEASE_FEDORA_FEDPKG)
 	IF(NOT _manage_release_fedora_dependencies_missing)
 	    IF(NOT DEFINED MANAGE_SOURCE_VERSION_CONTROL_TAG_FILE)
-		M_MSG($M_ERROR "Undefined MANAGE_SOURCE_VERSION_CONTROL_TAG_FILE, please use MANAGE_SOURCE_VERSION_CONTROL_GIT or other source version control")
+		M_MSG(${M_ERROR} "Undefined MANAGE_SOURCE_VERSION_CONTROL_TAG_FILE, please use MANAGE_SOURCE_VERSION_CONTROL_GIT or other source version control")
 	    ENDIF(NOT DEFINED MANAGE_SOURCE_VERSION_CONTROL_TAG_FILE)
 	    M_MSG(${M_INFO2} 
 		"MANAGE_SOURCE_VERSION_CONTROL_TAG_FILE=${MANAGE_SOURCE_VERSION_CONTROL_TAG_FILE}")
